[metadata]
name = deepdrivemd
version = attr: deepdrivemd.__version__
description = DeepDriveMD implemented with Colmena.
long_description = file:README.md
long_description_content_type=text/markdown

url = https://github.com/ramanathanlab/deepdrivemd
author = Alexander Brace, Heng Ma, Arvind Ramanathan
author_email = ramanathana@anl.gov

[options]
packages = find:
install_requires =
    pydantic==1.10.9
    pyyaml
    colmena==0.4.5
    parsl==2023.3.13
    MDAnalysis
    mdlearn==0.0.10a1
    scikit-learn
    torch
    natsort
    parmed

python_requires = >=3.8

[options.packages.find]
exclude =
    tests
    docs

[flake8] 
exclude = .git
max-line-length = 118
extend-ignore = E203,W503,E501,E302,E231
max-complexity = 14

[tool:pytest]
# https://docs.pytest.org/en/stable/customize.html
addopts = -x
junit_family=xunit1
filterwarnings =
    ignore::DeprecationWarning

[mypy]
show_error_codes = True
check_untyped_defs = True
follow_imports = normal
strict_optional = True
plugins = pydantic.mypy
strict = True
disallow_untyped_defs = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-MDAnalysis.*]
ignore_missing_imports = True

[mypy-openmm.*]
ignore_missing_imports = True

[mypy-colmena.*]
ignore_missing_imports = True

[mypy-mdlearn.*]
ignore_missing_imports = True
